--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,14 @@
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/static/pretendard.css");
+
+html{
+  font-family: 'Pretendard', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 62.5%; /* 62.5% of the base size of 16px = 10px */
+}
+
 body{
   background-color: beige;
+  font-weight: 500;
+  color: #333333;
 }
 
 .hidden{
