--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,23 @@
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/static/pretendard.css");
 
+html,
+body{
+  margin: 0;
+  padding: 0;
+  -webkit-text-size-adjust : none;  /* 크롬, 사파리, 오페라 신버전 */
+  -ms-text-size-adjust : none;  /* IE */
+  -moz-text-size-adjust : none;  /* 파이어폭스 */
+  -o-text-size-adjust : none;  /* 오페라 구버전 */
+}
 html{
   font-family: 'Pretendard', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 62.5%; /* 62.5% of the base size of 16px = 10px */
 }
-
 body{
   background-color: beige;
   font-weight: 500;
   color: #333333;
 }
-
 .hidden{
   display: none;
 }
