--- a/css/style.css
+++ b/css/style.css
@@ -57,19 +57,28 @@ body{
   position: absolute;
   top: 20px;
   right: 20px;
+  text-align: center;
+}
+#weather span{ 
+  display: block;
 }
 #quotes{
+  width: 100%;
+  max-width: 500px;
   position: absolute;
   bottom: 0;
   left: 50%;
   transform: translateX(-50%);
   padding-bottom: 20px;
+  text-align: center;
 }
 #quotes span{
-  display: block;
   font-size: 1.8rem;
   font-weight: 300;
   color: #ffffff;
   text-align: center;
   text-shadow: 3px 3px 5px #333333;
+}
+#quotes span:last-child{
+  font-weight: 700;
 }
